--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -3,3 +3,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    font-size: 10px;
+}
+
+@media only screen and (min-width: 992px) {
+    html {
+        font-size: 12px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    html {
+        font-size: 14px;
+    }
+}
+
+@media only screen and (min-width: 1536px) {
+    html {
+        font-size: 16px;
+    }
+}
