--- a/src/index.css
+++ b/src/index.css
@@ -580,44 +580,36 @@ video {
   bottom: 0px;
 }
 
-.bottom-5{
-  bottom: 1.25rem;
-}
-
-.left-0{
-  left: 0px;
-}
-
-.left-\[1\.5625rem\]{
-  left: 1.5625rem;
-}
-
-.right-0{
-  right: 0px;
-}
-
-.top-0{
-  top: 0px;
-}
-
-.left-\[1\.25rem\]{
-  left: 1.25rem;
-}
-
 .bottom-4{
   bottom: 1rem;
-}
-
-.left-\[1rem\]{
-  left: 1rem;
 }
 
 .bottom-\[-11\.33\%\]{
   bottom: -11.33%;
 }
 
+.left-0{
+  left: 0px;
+}
+
 .left-\[-22\.5\%\]{
   left: -22.5%;
+}
+
+.left-\[1rem\]{
+  left: 1rem;
+}
+
+.right-0{
+  right: 0px;
+}
+
+.right-\[-40\%\]{
+  right: -40%;
+}
+
+.top-0{
+  top: 0px;
 }
 
 .z-0{
@@ -646,6 +638,10 @@ video {
 
 .z-\[3\]{
   z-index: 3;
+}
+
+.z-\[4\]{
+  z-index: 4;
 }
 
 .z-\[5\]{
@@ -691,20 +687,40 @@ video {
   margin-bottom: 1.125rem;
 }
 
+.mb-\[1\.5625rem\]{
+  margin-bottom: 1.5625rem;
+}
+
 .mb-\[1\.875rem\]{
   margin-bottom: 1.875rem;
+}
+
+.mb-\[3\.75rem\]{
+  margin-bottom: 3.75rem;
 }
 
 .mb-\[4rem\]{
   margin-bottom: 4rem;
 }
 
+.mb-\[8\.5rem\]{
+  margin-bottom: 8.5rem;
+}
+
 .mt-1{
   margin-top: 0.25rem;
 }
 
+.mt-3{
+  margin-top: 0.75rem;
+}
+
 .mt-5{
   margin-top: 1.25rem;
+}
+
+.mt-6{
+  margin-top: 1.5rem;
 }
 
 .mt-\[0\.125rem\]{
@@ -719,32 +735,16 @@ video {
   margin-top: 0.875rem;
 }
 
+.mt-\[1\.125rem\]{
+  margin-top: 1.125rem;
+}
+
 .mt-\[1\.875rem\]{
   margin-top: 1.875rem;
 }
 
 .mt-\[2\.25rem\]{
   margin-top: 2.25rem;
-}
-
-.mb-\[1\.5625rem\]{
-  margin-bottom: 1.5625rem;
-}
-
-.mt-3{
-  margin-top: 0.75rem;
-}
-
-.mt-4{
-  margin-top: 1rem;
-}
-
-.mt-6{
-  margin-top: 1.5rem;
-}
-
-.mb-\[8\.5rem\]{
-  margin-bottom: 8.5rem;
 }
 
 .flex{
@@ -767,12 +767,24 @@ video {
   aspect-ratio: 1.28;
 }
 
+.aspect-\[1\.342\]{
+  aspect-ratio: 1.342;
+}
+
 .aspect-\[1\.47\]{
   aspect-ratio: 1.47;
 }
 
+.aspect-\[1\.523\]{
+  aspect-ratio: 1.523;
+}
+
 .aspect-\[2\.194\]{
   aspect-ratio: 2.194;
+}
+
+.aspect-\[3\.812\]{
+  aspect-ratio: 3.812;
 }
 
 .aspect-\[4\.66\]{
@@ -783,16 +795,12 @@ video {
   aspect-ratio: 1 / 1;
 }
 
-.aspect-\[3\.812\]{
-  aspect-ratio: 3.812;
-}
-
-.aspect-\[1\.342\]{
-  aspect-ratio: 1.342;
-}
-
 .h-1\/2{
   height: 50%;
+}
+
+.h-4{
+  height: 1rem;
 }
 
 .h-4\/5{
@@ -807,6 +815,10 @@ video {
   height: 24px;
 }
 
+.h-\[3\.625rem\]{
+  height: 3.625rem;
+}
+
 .h-\[4\.875rem\]{
   height: 4.875rem;
 }
@@ -819,24 +831,40 @@ video {
   height: 100%;
 }
 
-.h-\[3\.625rem\]{
-  height: 3.625rem;
-}
-
-.h-4{
-  height: 1rem;
+.h-\[2\.75rem\]{
+  height: 2.75rem;
 }
 
 .w-16{
   width: 4rem;
 }
 
+.w-4{
+  width: 1rem;
+}
+
 .w-4\/5{
   width: 80%;
 }
 
+.w-\[26\.125rem\]{
+  width: 26.125rem;
+}
+
 .w-\[3\.25rem\]{
   width: 3.25rem;
+}
+
+.w-\[3\.625rem\]{
+  width: 3.625rem;
+}
+
+.w-\[34rem\]{
+  width: 34rem;
+}
+
+.w-\[4\.065rem\]{
+  width: 4.065rem;
 }
 
 .w-\[4px\]{
@@ -851,8 +879,16 @@ video {
   width: 59.375rem;
 }
 
+.w-\[65\.5\%\]{
+  width: 65.5%;
+}
+
 .w-\[75rem\]{
   width: 75rem;
+}
+
+.w-\[80rem\]{
+  width: 80rem;
 }
 
 .w-fit{
@@ -870,28 +906,8 @@ video {
   width: max-content;
 }
 
-.w-\[90rem\]{
-  width: 90rem;
-}
-
-.w-\[85rem\]{
-  width: 85rem;
-}
-
-.w-\[80rem\]{
-  width: 80rem;
-}
-
-.w-\[3\.625rem\]{
-  width: 3.625rem;
-}
-
-.w-\[65\.5\%\]{
-  width: 65.5%;
-}
-
-.w-4{
-  width: 1rem;
+.w-\[2\.75rem\]{
+  width: 2.75rem;
 }
 
 .max-w-\[75rem\]{
@@ -910,6 +926,12 @@ video {
   border-collapse: collapse;
 }
 
+.translate-x-\[5vw\]{
+  --tw-translate-x: 5vw;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .translate-y-\[-50\%\]{
   --tw-translate-y: -50%;
   -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -918,6 +940,12 @@ video {
 
 .rotate-180{
   --tw-rotate: 180deg;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[-35deg\]{
+  --tw-rotate: -35deg;
   -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -985,6 +1013,10 @@ video {
   place-items: center;
 }
 
+.items-end{
+  align-items: flex-end;
+}
+
 .items-center{
   align-items: center;
 }
@@ -1017,6 +1049,10 @@ video {
   gap: 1rem;
 }
 
+.gap-5{
+  gap: 1.25rem;
+}
+
 .gap-6{
   gap: 1.5rem;
 }
@@ -1035,6 +1071,10 @@ video {
 
 .gap-\[1\.125rem\]{
   gap: 1.125rem;
+}
+
+.gap-\[1\.375rem\]{
+  gap: 1.375rem;
 }
 
 .gap-\[1\.625rem\]{
@@ -1065,13 +1105,17 @@ video {
   gap: 5.5rem;
 }
 
-.gap-\[1\.375rem\]{
-  gap: 1.375rem;
+.gap-\[0\.625rem\]{
+  gap: 0.625rem;
 }
 
 .gap-x-\[4\.5rem\]{
   -webkit-column-gap: 4.5rem;
           column-gap: 4.5rem;
+}
+
+.gap-y-5{
+  row-gap: 1.25rem;
 }
 
 .gap-y-\[4\.375rem\]{
@@ -1125,6 +1169,11 @@ video {
   border-color: rgb(78 86 131 / var(--tw-border-opacity));
 }
 
+.border-\[\#D4D4D4\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(212 212 212 / var(--tw-border-opacity));
+}
+
 .border-\[\#D6D6D6\]{
   --tw-border-opacity: 1;
   border-color: rgb(214 214 214 / var(--tw-border-opacity));
@@ -1149,11 +1198,6 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.border-\[\#D4D4D4\]{
-  --tw-border-opacity: 1;
-  border-color: rgb(212 212 212 / var(--tw-border-opacity));
-}
-
 .bg-\[\#041C3750\]{
   background-color: #041C3750;
 }
@@ -1171,6 +1215,10 @@ video {
   background-color: #FFFFFF08;
 }
 
+.bg-\[\#FFFFFF20\]{
+  background-color: #FFFFFF20;
+}
+
 .bg-blue{
   --tw-bg-opacity: 1;
   background-color: rgb(9 18 66 / var(--tw-bg-opacity));
@@ -1182,6 +1230,11 @@ video {
 
 .bg-blue91{
   background-color: #09124291;
+}
+
+.bg-secondary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 244 244 / var(--tw-bg-opacity));
 }
 
 .bg-transparent{
@@ -1209,6 +1262,10 @@ video {
   background-image: linear-gradient(4.06deg, #FFB629 -1.21%, #FFDA56 58.66%, #FFD7A6 116.84%);
 }
 
+.bg-gradientReverse{
+  background-image: linear-gradient(274.06deg, #FFB629 -1.21%, #FFDA56 50.75%, #FFD7A6 102.71%);
+}
+
 .object-cover{
   object-fit: cover;
 }
@@ -1216,6 +1273,11 @@ video {
 .px-20{
   padding-left: 5rem;
   padding-right: 5rem;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-\[1\.875rem\]{
@@ -1243,6 +1305,11 @@ video {
   padding-right: 3rem;
 }
 
+.px-\[5\.5rem\]{
+  padding-left: 5.5rem;
+  padding-right: 5.5rem;
+}
+
 .px-\[8px\]{
   padding-left: 8px;
   padding-right: 8px;
@@ -1261,6 +1328,11 @@ video {
 .py-\[1\.1875rem\]{
   padding-top: 1.1875rem;
   padding-bottom: 1.1875rem;
+}
+
+.py-\[1\.25rem\]{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .py-\[1\.3125rem\]{
@@ -1283,6 +1355,11 @@ video {
   padding-bottom: 3px;
 }
 
+.py-\[5\.625rem\]{
+  padding-top: 5.625rem;
+  padding-bottom: 5.625rem;
+}
+
 .py-\[6\.25rem\]{
   padding-top: 6.25rem;
   padding-bottom: 6.25rem;
@@ -1293,14 +1370,9 @@ video {
   padding-bottom: 8.75rem;
 }
 
-.px-\[5\.5rem\]{
-  padding-left: 5.5rem;
-  padding-right: 5.5rem;
-}
-
-.py-\[5\.625rem\]{
-  padding-top: 5.625rem;
-  padding-bottom: 5.625rem;
+.py-\[9rem\]{
+  padding-top: 9rem;
+  padding-bottom: 9rem;
 }
 
 .pb-11{
@@ -1309,6 +1381,10 @@ video {
 
 .pb-5{
   padding-bottom: 1.25rem;
+}
+
+.pb-\[2\.375rem\]{
+  padding-bottom: 2.375rem;
 }
 
 .pb-\[7\.5rem\]{
@@ -1327,6 +1403,10 @@ video {
   padding-left: 1rem;
 }
 
+.pl-\[2\.25rem\]{
+  padding-left: 2.25rem;
+}
+
 .pr-\[1\.875rem\]{
   padding-right: 1.875rem;
 }
@@ -1339,48 +1419,24 @@ video {
   padding-top: 1.25rem;
 }
 
-.pt-\[2\.625rem\]{
-  padding-top: 2.625rem;
-}
-
-.pt-\[6\.25rem\]{
-  padding-top: 6.25rem;
-}
-
-.pt-\[22\.675rem\]{
-  padding-top: 22.675rem;
-}
-
-.pt-\[21\.675rem\]{
-  padding-top: 21.675rem;
-}
-
-.pt-\[20rem\]{
-  padding-top: 20rem;
-}
-
-.pt-\[18rem\]{
-  padding-top: 18rem;
+.pt-\[1\.875rem\]{
+  padding-top: 1.875rem;
 }
 
 .pt-\[16rem\]{
   padding-top: 16rem;
 }
 
-.pt-\[1\.875rem\]{
-  padding-top: 1.875rem;
-}
-
-.pb-\[2\.375rem\]{
-  padding-bottom: 2.375rem;
-}
-
-.pb-\[6\.25rem\]{
-  padding-bottom: 6.25rem;
+.pt-\[2\.625rem\]{
+  padding-top: 2.625rem;
 }
 
 .pt-\[2\.875rem\]{
   padding-top: 2.875rem;
+}
+
+.pt-\[6\.25rem\]{
+  padding-top: 6.25rem;
 }
 
 .text-center{
@@ -1409,6 +1465,10 @@ video {
   line-height: 2.25rem;
 }
 
+.text-\[1\.2rem\]{
+  font-size: 1.2rem;
+}
+
 .text-\[1\.5625rem\]{
   font-size: 1.5625rem;
 }
@@ -1433,6 +1493,10 @@ video {
   font-size: 20px;
 }
 
+.text-\[3\.125rem\]{
+  font-size: 3.125rem;
+}
+
 .text-\[3\.75rem\]{
   font-size: 3.75rem;
 }
@@ -1452,8 +1516,13 @@ video {
   line-height: 1.75rem;
 }
 
-.text-\[3\.125rem\]{
-  font-size: 3.125rem;
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-\[1\.75rem\]{
+  font-size: 1.75rem;
 }
 
 .font-bold{
@@ -1504,6 +1573,10 @@ video {
   line-height: 2.625rem;
 }
 
+.leading-\[3\.75rem\]{
+  line-height: 3.75rem;
+}
+
 .leading-\[3rem\]{
   line-height: 3rem;
 }
@@ -1514,10 +1587,6 @@ video {
 
 .leading-\[4\.875rem\]{
   line-height: 4.875rem;
-}
-
-.leading-\[3\.75rem\]{
-  line-height: 3.75rem;
 }
 
 .text-\[\#23212A\]{
@@ -1553,6 +1622,11 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-blue{
+  --tw-text-opacity: 1;
+  color: rgb(9 18 66 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -1594,10 +1668,6 @@ video {
 
 .duration-300{
   transition-duration: 300ms;
-}
-
-.duration-500{
-  transition-duration: 500ms;
 }
 
 .ease-in{
@@ -1745,9 +1815,9 @@ html {
   transition-duration: 300ms;
 }
 
-.hover\:scale-\[120\%\]:hover{
-  --tw-scale-x: 120%;
-  --tw-scale-y: 120%;
+.hover\:scale-\[1\.1\]:hover{
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
   -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1773,8 +1843,22 @@ html {
   cursor: not-allowed;
 }
 
-@media (min-width: 1480px){
+@media (min-width: 1260px){
+  .xl\:translate-x-\[6vw\]{
+    --tw-translate-x: 6vw;
+    -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+            transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+}
+
+@media (min-width: 1440px){
   .xxl\:w-\[90rem\]{
     width: 90rem;
+  }
+
+  .xxl\:translate-x-\[6\.5vw\]{
+    --tw-translate-x: 6.5vw;
+    -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+            transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 }
